<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".calibration.CalibrationActivity">

    <!-- Camera Preview -->
    <androidx.camera.view.PreviewView
        android:id="@+id/preview_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Calibration Overlay (on top of camera preview) -->
    <pt.ineeve.bikefitapp.calibration.CalibrationOverlayView
        android:id="@+id/calibration_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/preview_view"
        app:layout_constraintEnd_toEndOf="@id/preview_view"
        app:layout_constraintStart_toStartOf="@id/preview_view"
        app:layout_constraintTop_toTopOf="@id/preview_view" />

    <!-- Instruction Text (at top of screen) -->
    <TextView
        android:id="@+id/instruction_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/instruction_background"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/calibration_instruction_saddle"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Button Container -->
    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/calibration_button_background"
        android:orientation="horizontal"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Reset Button -->
        <Button
            android:id="@+id/reset_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/calibration_reset" />

        <!-- Confirm Button -->
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/calibration_confirm" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
